--- a/.github/workflows/Prod-stage.yml
+++ b/.github/workflows/Prod-stage.yml
@@ -36,9 +36,9 @@ jobs:
         run: |
           pip install -e ".[local,test]"
 
-      # - name: Run unit tests
-      #   run: |
-      #     echo "Launching unit tests"
+      - name: Run unit tests
+        run: |
+          echo "Launching unit tests"
       
 
       - name: Workflow deployment (assets only upload)
