--- a/.github/workflows/Prod-stage.yml
+++ b/.github/workflows/Prod-stage.yml
@@ -47,11 +47,14 @@ jobs:
           run: |
             dbx launch Model-develop --from-assets --trace
 
+        - name: Delete Databricks Secrets Scope
+          run: |
+            databricks secrets delete-scope --scope secrets-scope
+
         - name: Create Databricks Secrets Scope
           run: |
             databricks secrets create-scope --scope secrets-scope
-            databricks secrets create-scope --scope feature-store-example-read
-            databricks secrets create-scope --scope feature-store-example-write
+            
 
         - name: Set Databricks Secrets
           run: |
@@ -60,12 +63,7 @@ jobs:
             databricks secrets put --scope secrets-scope --key databricks-host --string-value "${{ secrets.DATABRICKS_HOST }}"
             databricks secrets put --scope secrets-scope --key databricks-token --string-value "${{ secrets.DATABRICKS_TOKEN }}"
 
-            databricks secrets put --scope feature-store-example-read --key dynamo-access-key-id --string-value "${{ secrets.C5I_ACCESS_KEY }}"
-            databricks secrets put --scope feature-store-example-read --key dynamo-secret-access-key --string-value "${{ secrets.C5I_SECRET_KEY }}"
-
-            databricks secrets put --scope feature-store-example-write --key dynamo-access-key-id --string-value "${{ secrets.C5I_ACCESS_KEY }}"
-            databricks secrets put --scope feature-store-example-write --key dynamo-secret-access-key --string-value "${{ secrets.C5I_SECRET_KEY }}"
-
+            
         - name: Workflow Data-preprocessing deployment (assets only upload)
           run: |
             dbx deploy Data-preprocessing --assets-only 
